--- a/.github/workflows/tf_plan.yaml
+++ b/.github/workflows/tf_plan.yaml
@@ -6,7 +6,11 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-
+  
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +22,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.ASSUME_ROLE }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: us-east-1
 
       - name: Run Terraform Validate
