--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -1,4 +1,4 @@
-name: Terraform Plan and Validate
+name: Terraform Validate and Plan
 
 on:
   push:
@@ -27,6 +27,9 @@ jobs:
           
       - name: Run Terraform Init
         run: terraform init
+        
+      - name: Run Terraform Format
+        run: terraform fmt -check
         
       - name: Run Terraform Validate
         run: terraform validate -no-color
