--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -19,6 +19,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
       
+      - uses: hashicorp/vault-action@v2
+        id: vault_secrets
+        with:
+          url: https://vault.tenzin.io
+          role: actions-runner-role-cloudflare-dns
+          method: jwt
+          secrets: |
+            secret/data/cloudflare api_key | CLOUDFLARE_API_KEY
+            secret/data/cloudflare email | CLOUDFLARE_API_EMAIL
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -36,6 +46,6 @@ jobs:
 
       - name: Run Terraform Plan
         env:
-          CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
-          CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+          CLOUDFLARE_API_KEY: ${{ steps.vault_secrets.outputs.CLOUDFLARE_API_KEY }}
+          CLOUDFLARE_EMAIL: ${{ steps.vault_secrets.outputs.CLOUDFLARE_EMAIL }}
         run: terraform plan -no-color
