--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -26,8 +26,8 @@ jobs:
           role: actions-runner-role-cloudflare-dns
           method: jwt
           secrets: |
-            secret/data/cloudflare api_key | CLOUDFLARE_API_KEY
-            secret/data/cloudflare email | CLOUDFLARE_API_EMAIL
+            secret/data/cloudflare api_key | CLOUDFLARE_API_KEY ;
+            secret/data/cloudflare email | CLOUDFLARE_API_EMAIL ;
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
