Update workflows to use Vault

--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -14,7 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
-      
+
+      - uses: hashicorp/vault-action@v2
+        id: vault_secrets
+        with:
+          url: https://vault.tenzin.io
+          role: actions-runner-role-cloudflare-dns
+          method: jwt
+          secrets: |
+            secret/data/cloudflare api_key | CLOUDFLARE_API_KEY ;
+            secret/data/cloudflare email | CLOUDFLARE_EMAIL ;
+     
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -32,6 +42,6 @@ jobs:
 
       - name: Run Terraform Apply
         env:
-          CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
-          CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+          CLOUDFLARE_API_KEY: ${{ steps.vault_secrets.outputs.CLOUDFLARE_API_KEY }}
+          CLOUDFLARE_EMAIL: ${{ steps.vault_secrets.outputs.CLOUDFLARE_EMAIL }}
         run: terraform apply -no-color -auto-approve
