--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -41,13 +41,13 @@ jobs:
         
       - name: Run Terraform Format
         run: terraform fmt -check
+
+      - name: Setup TERRAFORM_VAULT_AUTH_JWT
+        run: |-
+          export TERRAFORM_VAULT_AUTH_JWT=$(echo $GITHUB_OIDC_TOKEN | jq -r .value)
         
       - name: Run Terraform Validate
-        env:
-          TERRAFORM_VAULT_AUTH_JWT: ${{ env.GITHUB_OIDC_TOKEN }}
         run: terraform validate -no-color
 
       - name: Run Terraform Plan
-        env:
-          TERRAFORM_VAULT_AUTH_JWT: ${{ env.GITHUB_OIDC_TOKEN }}
         run: terraform plan -no-color
