Working vault-action

--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -21,6 +21,7 @@ jobs:
           url: https://vault.tenzin.io
           role: actions-runner-role-cloudflare-dns
           method: jwt
+          exportToken: true
           secrets: |
             secret/data/cloudflare api_key | CLOUDFLARE_API_KEY ;
             secret/data/cloudflare email | CLOUDFLARE_EMAIL ;
@@ -41,7 +42,4 @@ jobs:
         run: terraform validate -no-color
 
       - name: Run Terraform Apply
-        env:
-          CLOUDFLARE_API_KEY: ${{ steps.vault_secrets.outputs.CLOUDFLARE_API_KEY }}
-          CLOUDFLARE_EMAIL: ${{ steps.vault_secrets.outputs.CLOUDFLARE_EMAIL }}
         run: terraform apply -no-color -auto-approve
