--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,9 +1,7 @@
-name: Terraform Validate and Plan
+name: Terraform
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
   workflow_dispatch:
   
@@ -12,7 +10,7 @@ permissions:
   contents: read
   
 jobs:
-  build:
+  plan-and-validate:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,8 +25,7 @@ jobs:
           method: jwt
           exportToken: true
           secrets: |
-            secret/data/cloudflare api_key | CLOUDFLARE_API_KEY ;
-            secret/data/cloudflare email | CLOUDFLARE_EMAIL ;
+            github/data/cloudflare api_token | CLOUDFLARE_API_TOKEN;
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -47,3 +44,33 @@ jobs:
 
       - name: Run Terraform Plan
         run: terraform plan -no-color
+
+  apply:
+    needs: [plan-and-validate]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v2
+
+      - uses: hashicorp/vault-action@v2
+        id: vault_secrets
+        with:
+          url: https://vault.tenzin.io
+          role: actions-runner-role-cloudflare-dns
+          method: jwt
+          exportToken: true
+          secrets: |
+            github/data/cloudflare api_token | CLOUDFLARE_API_TOKEN;
+     
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_TO_ASSUME }}
+          aws-region: us-east-1
+          
+      - name: Run Terraform Init
+        run: terraform init
+
+      - name: Run Terraform Apply
+        run: terraform apply -no-color -auto-approve
